# papageno

./: .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestCustom.cmake  README.md  papageno.c  papageno.doxygen  papageno.h  papageno_qmk.c  papageno_qmk.h
compiler/: CMakeLists.txt  PPG_Compiler.cpp  PPG_Compiler.hpp.in  compiler.cmdline  compiler.h  compiler.yacc  test_input.txt
compiler/src/: PPG_Compiler_ParserTree_Node.hpp
compiler/src/CommandLine/: PPG_CommandLine.cpp  PPG_CommandLine.hpp  PPG_CommandLine.txt.in
compiler/src/Generator/: PPG_Global.cpp  PPG_Global.hpp
compiler/src/Misc/: PPG_ErrorHandling.hpp  PPG_StringHandling.hpp
compiler/src/Parser/: PPG_Parser.hpp  PPG_Parser.lex  PPG_Parser.yacc  PPG_ParserToken.hpp
compiler/src/ParserTree/: PPG_Action.cpp  PPG_Action.hpp  PPG_Agglomerate.hpp  PPG_Aggregate.cpp  PPG_Aggregate.hpp  PPG_Alias.cpp  PPG_Alias.hpp  PPG_Chord.hpp  PPG_Cluster.cpp  PPG_Cluster.hpp  PPG_Entity.cpp  PPG_Entity.hpp  PPG_Input.cpp  PPG_Input.hpp  PPG_NextEntity.cpp  PPG_NextEntity.hpp  PPG_Node.hpp  PPG_Note.hpp  PPG_Pattern.cpp  PPG_Pattern.hpp  PPG_Phrase.cpp  PPG_Phrase.hpp  PPG_Sequence.cpp  PPG_Sequence.hpp  PPG_Token.cpp  PPG_Token.hpp
compiler/src/Settings/: PPG_Settings.cpp  PPG_Settings.hpp
glockenspiel/: CMakeLists.txt  GLS_Compiler.cpp  GLS_Compiler.hpp.in  build_instructions.txt  compiler.lex  compiler.yacc  test_input.txt
glockenspiel/src/CommandLine/: GLS_CommandLine.cpp  GLS_CommandLine.hpp  GLS_CommandLineGengetopt.cpp  GLS_CommandLineGengetopt.hpp  GLS_CommandLineGengetopt.txt.in
glockenspiel/src/Generator/: GLS_Global.cpp  GLS_Prefix.hpp
glockenspiel/src/Misc/: GLS_ErrorHandling.hpp  GLS_StringHandling.hpp
glockenspiel/src/Parser/: GLS_LocationOfDefinition.cpp  GLS_LocationOfDefinition.hpp  GLS_Parser.hpp  GLS_Parser.lex  GLS_Parser.lex.cpp  GLS_Parser.lex.hpp  GLS_Parser.yacc  GLS_Parser.yacc.cpp  GLS_Parser.yacc.hpp  GLS_ParserToken.hpp
glockenspiel/src/ParserTree/: GLS_Action.cpp  GLS_Action.hpp  GLS_Aggregate.cpp  GLS_Aggregate.hpp  GLS_Alias.cpp  GLS_Alias.hpp  GLS_Chord.hpp  GLS_Cluster.cpp  GLS_Cluster.hpp  GLS_Entity.hpp  GLS_Input.cpp  GLS_Input.hpp  GLS_NextEntity.cpp  GLS_NextEntity.hpp  GLS_NextTokenFlags.cpp  GLS_NextTokenFlags.hpp  GLS_Node.cpp  GLS_Node.hpp  GLS_Note.cpp  GLS_Note.hpp  GLS_Pattern.cpp  GLS_Pattern.hpp  GLS_Phrase.cpp  GLS_Phrase.hpp  GLS_Sequence.cpp  GLS_Sequence.hpp  GLS_Token.cpp  GLS_Token.hpp
glockenspiel/src/Settings/: GLS_Defaults.cpp  GLS_Defaults.hpp  GLS_Settings.cpp  GLS_Settings.hpp
parser/: CMakeLists.txt  parser.lex  parser.yacc  test_input.txt
src/: CMakeLists.txt  papageno.c  papageno.h  ppg_action.c  ppg_action.h  ppg_action_flags.h  ppg_aggregate.c  ppg_aggregate.h  ppg_bitfield.c  ppg_bitfield.h  ppg_chord.c  ppg_chord.h  ppg_cluster.c  ppg_cluster.h  ppg_compression.c  ppg_compression.h  ppg_context.c  ppg_context.h  ppg_debug.c  ppg_debug.h  ppg_event.c  ppg_event.h  ppg_event_buffer.c  ppg_event_buffer.h  ppg_global.c  ppg_global.h  ppg_input.c  ppg_input.h  ppg_layer.h  ppg_leader_sequences.c  ppg_leader_sequences.h  ppg_note.c  ppg_note.h  ppg_pattern.c  ppg_pattern.h  ppg_sequence.c  ppg_sequence.h  ppg_settings.h  ppg_settings.h.in  ppg_signal_callback.h  (+14 more)
src/detail/: ppg_active_tokens.h  ppg_active_tokens_detail.c  ppg_active_tokens_detail.h  ppg_aggregate_detail.c  ppg_aggregate_detail.h  ppg_chord_detail.h  ppg_cluster_detail.h  ppg_compression_detail.c  ppg_compression_detail.h  ppg_context_detail.c  ppg_context_detail.h  ppg_event_buffer_detail.c  ppg_event_buffer_detail.h  ppg_furcation_detail.c  ppg_furcation_detail.h  ppg_global_detail.c  ppg_global_detail.h  ppg_input_detail.c  ppg_input_detail.h  ppg_malloc_detail.c  ppg_malloc_detail.h  ppg_note_detail.c  ppg_note_detail.h  ppg_pattern_detail.c  ppg_pattern_detail.h  ppg_pattern_matching_detail.c  ppg_pattern_matching_detail.h  ppg_sequence_detail.h  ppg_signal_detail.c  ppg_signal_detail.h  ppg_time_detail.c  ppg_time_detail.h  ppg_token_detail.c  ppg_token_detail.h  ppg_token_precedence_detail.h  ppg_token_vtable_detail.c  ppg_token_vtable_detail.h
testing/char_strings/: CMakeLists.txt  TestAndCheck.script.cmake  TestingWithCompression.script.cmake  alphabetic_inputs_ppg.hpp  default_layers.h  papageno_char_strings.c  papageno_char_strings.h  test_abort_trigger.c  test_abort_trigger_tests.h  test_abort_trigger_token_tree.h  test_char_strings.c  test_chords.c  test_chords_actions.h  test_clusters.c  test_clusters_token_tree.h  test_compiler_run.c  test_compression.c  test_context_switching.c  test_enable_disable.c  test_enable_disable_timeout.c  test_fall_back.c  test_fall_through.c  test_fallback.c  test_large_systems.c  test_large_systems_2.c  test_large_systems_2_aux.h  test_large_systems_actions.h  test_large_systems_includes.h  test_large_systems_token_tree.h  test_layers.c  test_layers_layers.h  test_leader_sequences.c  test_leader_sequences_actions.h  test_leader_sequences_layers.h  test_leader_sequences_tests.h  test_note_lines.c  test_note_lines_actions.h  test_note_lines_tests.h  test_parser_run.c  test_strict_notes.c  (+6 more)
testing/char_strings/abort_trigger/: abort_trigger_actions.h  abort_trigger_context_initialization.h  abort_trigger_ppg.h
testing/char_strings/bak/: test_abort_trigger.c  test_chords.c  test_clusters.c  test_layers.c  test_leader_sequences.c  test_note_lines.c  test_token_precedence.c
testing/char_strings/chords/: chords_ppg.h  chords_tests.h  chords_token_tree.h
testing/char_strings/clusters/: clusters_actions.h  clusters_ppg.h  clusters_tests.h
testing/char_strings/context_switching/: context_switching.c
testing/char_strings/enable_disable/: enable_disable.c
testing/char_strings/enable_disable_timeout/: enable_disable_timeout.c
testing/char_strings/fallback/: fallback.c
testing/char_strings/large_systems/: large_systems.c  large_systems_2.c
testing/char_strings/layers/: layers_actions.h  layers_ppg.h  layers_tests.h  layers_token_tree.h
testing/char_strings/leader_sequences/: leader_sequences_functions.h  (+4 more)
(+329 files in other folders)
